Reformat code to adhere to 120 character line length limit across multiple files